force-app/main/default/objects/Rep_Project_Pipeline__c/Rep_Project_Pipeline__c.object-meta.xml
<CustomObject>
    <label>Rep Project Pipeline</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>PipLine No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rep Project Pipeline</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>