force-app/main/default/objects/Rep_Project_Pipeline__c/fields/Reason_for_loss__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_loss__c</fullName>
    <label>Reason for loss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>