force-app/main/default/objects/Rep_Project_Pipeline__c/fields/Rep_Customer__c.field-meta.xml
<CustomField>
    <fullName>Rep_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rep Project Pipeline</relationshipLabel>
    <relationshipName>Rep_Project_Pipeline</relationshipName>
    <type>Lookup</type>
</CustomField>